Fix overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -337,6 +337,7 @@ samp {
   overflow-x: auto;
   display: inline-block;
 }
+kbd > samp { overflow-x: unset }
 pre { box-shadow: 0 0 0.618ch }
 
 math {
